flecha y casi terminado el html

--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -29,20 +29,20 @@
     <div class="entrada-datos">
       <div class="input-dias">
         <label for="dia">Day</label> <br>
-        <input type="text" name="dia" id="day" placeholder="DD">
+        <input type="text" name="dia" id="day" placeholder="DD" required >
       </div>
       <div class="input-mes">
         <label for="mes">Month</label> <br>
-        <input type="text" name="mes" id="mounth" placeholder="MM">
+        <input type="text" name="mes" id="mounth" placeholder="MM" required >
       </div>
       <div class="input-anyo">
         <label for="anyo">Year</label> <br>
-        <input type="text" name="anyo" id="year" placeholder="YYYY">
+        <input type="text" name="anyo" id="year" placeholder="YYYY" required >
       </div>
     </div>
     <div class="boton">
-      <!-- <span class="linea"><hr></span>  -->
-      <button class="boton"></button>
+      <button class="pulsa"></button>
+      <span class="linea"><hr></span> 
     </div>
     <div class="salida-datos">
       <p class="muestra-datos"> <span class="resultado"> -- </span> years </p>
@@ -51,6 +51,9 @@
     </div>
 
   </div>
+  <!-- <div class="container">
+    <img src="design/desktop-completed.jpg" width="900px" alt="">
+  </div> -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Oswaldo</a>.
