--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,7 +15,9 @@
   </style>
 </head>
 <body>
-
+<div class="container">
+  
+</div>
   Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
